--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,8 @@
 # Appearance
 
 appearance:
-  theme_day: forest
-  theme_night: forest
-  font: classic
+  theme: cam
+  font: native
   font_size: L
 
 # SEO
