--- a/data/themes/cam.toml
+++ b/data/themes/cam.toml
@@ -1,18 +1,23 @@
 # Theme metadata
 name = "cam"
 
-# Is theme light or dark?
-light = true
+[light]
+  # Primary
+  primary = "#4caf50"
 
-# Primary
-primary = "#4caf50"
+  # Menu
+  menu_primary = "#4caf50"
+  menu_text = "#fff"
+  menu_text_active = "#1b5e20"
+  menu_title = "#fff"
 
-# Menu
-menu_primary = "#4caf50"
-menu_text = "#fff"
-menu_text_active = "#1b5e20"
-menu_title = "#fff"
+  # Home sections
+  home_section_odd = "rgb(255, 255, 255)"
+  home_section_even = "rgb(247, 247, 247)"
 
-# Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+[dark]
+  # Primary
+  primary = "#4caf50"
+
+  link = "#4caf50"
+  link_hover = "#fff"
