--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#posts'
     weight: 20
   - name: Publications
-    url: '#publications'
+    url: 'Publication/publications'
     weight: 30
   - name: Teaching
     url: '#teaching'
