--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,16 +5,16 @@
 
 main:
   - name: Home
-    url: '#about'
+    url: '/about'
     weight: 10
   - name: Posts
-    url: '#posts'
+    url: '/posts'
     weight: 20
   - name: Publications
-    url: 'Publication/publications'
+    url: '/publication'
     weight: 30
   - name: Teaching
-    url: '#teaching'
+    url: '/teaching'
     weight: 40
   - name: Contact
     url: '#contact'
